packages/toplevel_expect_test.v0.13.0/test/test_testing.mlt
[%%org {|
#+TITLE: Test interaction with inline tests runner
|}]

#verbose true;;

[%%org {|
The toplevel expect tests do not by default run [ppx_inline_test], and anyway the jenga
rules are not able to infer runtime deps of ppxes in toplevel expect tests.
|}]
let testing = Ppx_inline_test_lib.Runtime.testing;;

[%%expect {|
Line _, characters _-_:
Error: Unbound module Ppx_inline_test_lib
|}]

let am_testing = Base.Exported_for_specific_uses.am_testing;;

[%%expect {|
val am_testing : bool = true
|}]
